--- a/main.css
+++ b/main.css
@@ -1,10 +1,29 @@
 /*CSharpDeveloper.io Site Main CSS file*/
+
+/*Variables Section (ROOT)*/
+:root {
+    /*Header Variables*/
+    --headerHeight: 300px;
+    /*Body Variables*/
+}
+
+
+
+
+
 body {
-    background-color: black;
+    background-color:black;
 }
 /* Main Header Layout*/
 .mainHeader {
+    display:block;
     background-color:white;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:var(--headerHeight);
+    box-shadow:0 2px 5px rgba(0,0,0,0);
 }
 .mainHeader p{
     color:blue;
