css layout adjustments

--- a/main.css
+++ b/main.css
@@ -9,14 +9,9 @@
 
 /*Main Header Layout*/
 .mainHeader {
-    display:block;
-    background-color:white;
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:var(--headerHeight);
-    box-shadow:0 2px 5px rgba(0,0,0,0);
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
 }
 .mainHeader p{
     color:blue;
