--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@
 
 /*Main Header Layout*/
 .mainHeader {
+    border-radius:25px;
     background-color: #f1f1f1;
     padding: 20px;
     text-align: center;
