--- a/main.css
+++ b/main.css
@@ -2,26 +2,95 @@
 
 /*Variables Section (ROOT)*/
 :root {
+    /*Radius Controls Variables*/
+    --borderRadius: 15px;
+    --border: 1px solid #ffffff;
+    /*Padding for site Elements Variables*/
+    --elementPadding: 5px;
+    /*Color Scheme Variables*/
+    --backGroundColor: #383838;
     /*Header Variables*/
-    --headerHeight: 300px;
+    --headerHeight: 75px;
+    /*Navigation Variables*/
+    --navHeight: 75px;
     /*Body Variables*/
+    /*Content 1 (left Column) Variables*/
+    /*Main Variables*/
+    /*Aside Variables*/
+    --asideWidth: 125px;
+    /*Content 2 (right Column) Variables*/
+    /*Footer Variables*/
+    --footerHeight: 75px;
 }
 
 /*Main Header Layout*/
 .mainHeader {
-    border-radius:25px;
-    border:2px solid #00ff21;
-    background-color: #f1f1f1;
-    padding: 20px;
-    text-align: center;
+    border-radius: var(--borderRadius);
+    border: var(--border);
+    background-color: var(--backGroundColor);
+
+    grid-column-start: 1;
+    grid-column-end: 5;
 }
-.mainHeader p {
-    color:blue;
+.mainHeader p{
+    
 }
 .mainHeader h1{
-    color:purple;
+    
+    
 }
 /*Body Layout*/
 body {
     background-color: black;
+    width: 98vw;
+    height: 98vh;
+    display: grid;
+    grid-template-columns: 1fr 2fr var(--asideWidth) 1fr;
+    grid-template-rows: var(--headerHeight) var(--navHeight) 1fr var(--footerHeight);
+    gap: 5px;
+    padding: 5px;
+    box-sizing: border-box;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+}
+/*Navigation Layout*/
+.navigation {
+    border-radius: var(--borderRadius);
+    border: var(--border);
+    background-color: var(--backGroundColor);
+    grid-column-start: 1;
+    grid-column-end: 5;
+}
+/*Content 1 - Left Column*/
+.content1 {
+    border-radius: var(--borderRadius);
+    border: var(--border);
+    background-color: var(--backGroundColor);
+}
+/*Main Layout - Column 2*/
+.mainContent {
+    border-radius: var(--borderRadius);
+    border: var(--border);
+    background-color: var(--backGroundColor);
+}
+/*Aside Layout - Column 3*/
+.asideMain {
+    border-radius: var(--borderRadius);
+    border: var(--border);
+    background-color: var(--backGroundColor);
+}
+/*Content 2 - Column 4*/
+.content2 {
+    border-radius: var(--borderRadius);
+    border: var(--border);
+    background-color: var(--backGroundColor);
+}
+/*Footer Layout*/
+footer {
+    border-radius: var(--borderRadius);
+    border: var(--border);
+    background-color: var(--backGroundColor);
+    grid-column-start: 1;
+    grid-column-end: 5;
 }
