Final Changes to the index.html Portfolio site until the Front end development pages are complete for the school project

--- a/mainv1.css
+++ b/mainv1.css
@@ -91,6 +91,7 @@ body {
 .navigation ul ul li a:hover{
     background-color: var(--backGroundColor);
     border-radius: var(--borderRadius);
+    border: var(--border);
 }
 /*Content 1 - Left Column*/
 .content1 {
