--- a/FrontEndDevelopmentD277/D277MainV1.00.css
+++ b/FrontEndDevelopmentD277/D277MainV1.00.css
@@ -23,6 +23,11 @@
     --footerHeight: 45px;
 }
 /* ############################################################################################### */
+/* CSS RESET*/
+*{
+    margin:0;
+    padding:0;
+}
 /*| START D277Main.html Style Section |*/
 /*Main Header Layout*/
 .mainHeader {
@@ -54,9 +59,9 @@ body {
     display: grid;
     grid-template-columns: 1fr 2fr var(--asideWidth) 1fr;
     grid-template-rows: var(--headerHeight) var(--navHeight) 1fr var(--footerHeight);
-    gap: 3px;
-    padding: 3px;
-    box-sizing: border-box;
+    /*gap: 0px;
+    padding: 0px;*/
+    /*box-sizing: border-box;*/
     font-weight: 100;
     color: white;
     text-align: center;
@@ -123,30 +128,25 @@ body {
     border: var(--border);
     background-color: var(--backGroundColor);
 }
-.mainContent ul{
-    list-style-type:none;
-    display:block;
-    padding:0;
-    margin:0;
+.mainImage {
+    border-radius: var(--borderRadius);
 }
-.mainContent li{
-    display:inline-block;
-    position:relative;
-    
-}
-.mainContent img{
-     border-radius: var(--borderRadius);
-     display:block;
-     margin-left:auto;
-     margin-right:auto;
-     width:100%;
-     font-weight:100;
+.mainPhoto img {
+    border-radius: var(--borderRadius);
 }
 /*Aside Layout - Column 3*/
 .asideMain {
     border-radius: var(--borderRadius);
     border: var(--border);
     background-color: var(--backGroundColor);
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+}
+.asideMain img{
+    border-radius: var(--borderRadius);
+    width:100%;
 }
 /*Content 2 - Column 4*/
 .content2 {
