Finalized the javascript for D277Main.html - added a cache buster name change to the css file and updated link to css in D277Main.html

--- a/FrontEndDevelopmentD277/D277MainV1.01.css
+++ b/FrontEndDevelopmentD277/D277MainV1.01.css
@@ -128,10 +128,7 @@ body {
     border: var(--border);
     background-color: var(--backGroundColor);
 }
-.mainImage {
-    border-radius: var(--borderRadius);
-}
-.mainPhoto img {
+#imageDisplayed.mainContent img{
     border-radius: var(--borderRadius);
 }
 /*Aside Layout - Column 3*/
