--- a/FrontEndDevelopmentD277/D277MainV1.02.css
+++ b/FrontEndDevelopmentD277/D277MainV1.02.css
@@ -16,6 +16,7 @@
     /*Body Variables*/
     /*Content 1 (left Column) Variables*/
     /*Main Variables*/
+    --maxWidth: 600px;
     /*Aside Variables*/
     --asideWidth: 125px;
     /*Content 2 (right Column) Variables*/
@@ -57,7 +58,7 @@ body {
     width: 98vw;
     height: 98vh;
     display: grid;
-    grid-template-columns: 1fr 2fr var(--asideWidth) 1fr;
+    grid-template-columns: 1fr 1.5fr var(--asideWidth) 1fr;
     grid-template-rows: var(--headerHeight) var(--navHeight) 1fr var(--footerHeight);
     /*gap: 0px;
     padding: 0px;*/
@@ -127,9 +128,11 @@ body {
     border-radius: var(--borderRadius);
     border: var(--border);
     background-color: var(--backGroundColor);
+    
 }
-#imageDisplayed.mainContent img{
+#imageDisplayed.mainContent img {
     border-radius: var(--borderRadius);
+    width: var(--maxWidth);
 }
 /*Aside Layout - Column 3*/
 .asideMain {
