initial Javascript if statment competed with alert testing. Next steps are to figure out a foreach loop in place of the if and possibly call a seperate function - undecided. stopping for the evening back tomorrow!

--- a/FrontEndDevelopmentD277/D277MainV1.02.css
+++ b/FrontEndDevelopmentD277/D277MainV1.02.css
@@ -123,6 +123,10 @@ body {
     border: var(--border);
     background-color: var(--backGroundColor);
 }
+.content1 p {
+    display: none;
+    font-size: 18px;
+}
 /*Main Layout - Column 2*/
 .mainContent {
     border-radius: var(--borderRadius);
