added code to the capital.html files, fixed spelling errors

--- a/FrontEndDevelopmentD277/D277MainV1.03.css
+++ b/FrontEndDevelopmentD277/D277MainV1.03.css
@@ -160,7 +160,7 @@ body {
     background-color: var(--backGroundColor);
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    padding:2px;
     align-items: start;
 }
 .asideMain img{
