--- a/FrontEndDevelopmentD277/D277MainV1.04.css
+++ b/FrontEndDevelopmentD277/D277MainV1.04.css
@@ -68,9 +68,17 @@ body {
     display: grid;
     grid-template-columns: 1fr 1.5fr var(--asideWidth) 1fr;
     grid-template-rows: var(--headerHeight) var(--navHeight) 1fr var(--footerHeight);
-    /*gap: 0px;
-    padding: 0px;*/
-    /*box-sizing: border-box;*/
+    font-weight: 100;
+    color: white;
+    text-align: center;
+}
+#centered3Columns {
+    background-color: black;
+    width: 98vw;
+    height: 98vh;
+    display: grid;
+    grid-template-columns: 1fr 800px 1fr;
+    grid-template-rows: var(--headerHeight) var(--navHeight) 1fr var(--footerHeight);
     font-weight: 100;
     color: white;
     text-align: center;
@@ -141,6 +149,13 @@ body {
     text-align: left;
     padding: 20px 5px;
 }
+.content1 ul{
+    text-align: left;
+}
+.content1 ul li{
+    padding: 10px 20px;
+    font-size: var(--textContent);
+}
 
 /*Main Layout - Column 2*/
 .mainContent {
@@ -152,6 +167,10 @@ body {
 #imageDisplayed.mainContent img {
     border-radius: var(--borderRadius);
     width: var(--maxWidth);
+}
+.mainContent img {
+    border-radius: var(--borderRadius);
+    width: 800px;
 }
 /*Aside Layout - Column 3*/
 .asideMain {
