update to CSS image size for capital.html

--- a/FrontEndDevelopmentD277/D277MainV1.06.css
+++ b/FrontEndDevelopmentD277/D277MainV1.06.css
@@ -264,7 +264,7 @@ body {
 }
 .mainContent img {
     border-radius: var(--borderRadius);
-    width: 600px;
+    width: 100%;
 }
 /*Main Aside Layout - Column 3*/
 .asideMain {
