--- a/FrontEndDevelopmentD277/D277MainV1.07.css
+++ b/FrontEndDevelopmentD277/D277MainV1.07.css
@@ -1,5 +1,3 @@
-/*CSharpDeveloper.io Site Main CSS file*/
-
 /*Variables Section (ROOT)*/
 :root {
     /*Radius Controls Variables*/
@@ -42,8 +40,7 @@
     background-color: var(--backGroundColor);
 
     grid-column-start: 1;
-    grid-column-end: 5;
-    
+    grid-column-end: 5;    
 }
 .mainHeader table{
     width:100%;
@@ -60,6 +57,7 @@
     margin-top:10px;
     font-size: var(--mainH1Size);
 }
+
 /*Body Main Layout*/
 body {
     background-color: black;
@@ -83,6 +81,7 @@ body {
     color: white;
     text-align: center;
 }
+
 /*Body City-Layout*/
 #cityLayout {
     background-color: black;
@@ -95,6 +94,7 @@ body {
     color: white;
     text-align: center;
 }
+
 /*Body InfoPage*/
 .infoLayout {
     background-color: black;
@@ -122,8 +122,7 @@ body {
     border-radius: var(--borderRadius);
     border: var(--border);
     border-spacing: 1px;
-    font-size: var(--textContent);
-    
+    font-size: var(--textContent);    
 }
 .dataTable th {
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
@@ -139,6 +138,7 @@ body {
 .dataTable td:hover {
     background-color: black;
 }
+
 /* Contact Us Layout*/
 .contactUs {
     background-color: black;
@@ -149,7 +149,7 @@ body {
     grid-template-rows: var(--headerHeight) var(--navHeight) 1fr var(--footerHeight);
     font-weight: 100;
     color: white;
-    text-align: left;
+    text-align: center;
 }
 .contactUs form {
     font-size: var(--textContent);
@@ -160,6 +160,7 @@ body {
     width: 98vw;
     height: 80vh;
     padding: 10px 0px 10px 20px;
+    text-align:left;
 }
 .contactUs form h1 {
     font-size: var(--subH1Sizes);
@@ -176,6 +177,7 @@ body {
     width:200px;
     margin:10px 0px 0px 0px;
 }
+
 /*Navigation Layout uniform*/
 .navigation {
     border-radius: var(--borderRadius);
@@ -187,7 +189,6 @@ body {
     z-index: 999;
     text-align: left;
 }
-
 .navigation ul {
     list-style-type: none;
     margin: 0px;
@@ -195,40 +196,35 @@ body {
     border-radius: var(--borderRadius);
     background-color: #000000;
 }
-
 .navigation li {
     display: inline-block;
 }
-
 .navigation li a {
     color: white;
     display: block;
     padding: 10px 20px;
     text-decoration: none;
 }
-
 .navigation ul ul {
     position: absolute;
     top: 100%;
     display: none;
 }
-
 .navigation ul ul li {
     display: block;
 }
-
 .navigation li:hover ul {
     display: block;
 }
-
 .navigation ul ul li a:hover {
     background-color: var(--backGroundColor);
     border-radius: var(--borderRadius);
     border: var(--border);
-    }
+}
 #mainProfilePageReturn{
     float:right;
 }
+
 /*Main Layout Content 1 - Left (1st) Column && Not Used in City Layout at all*/
 .content1 {
     border-radius: var(--borderRadius);
@@ -266,6 +262,7 @@ body {
     border-radius: var(--borderRadius);
     width: 100%;
 }
+
 /*Main Aside Layout - Column 3*/
 .asideMain {
     border-radius: var(--borderRadius);
@@ -280,6 +277,7 @@ body {
     border-radius: var(--borderRadius);
     width:100%;
 }
+
 /* City Layout Aside - Column 2*/
 .asideCityLayout {
     border-radius: var(--borderRadius);
@@ -299,6 +297,7 @@ body {
     padding: 10px 20px;
     font-size: var(--textContent);
 }
+
 /*Main Layout Content 2 - Column 4 && City Layout - Column 3*/
 .content2 {
     border-radius: var(--borderRadius);
@@ -316,6 +315,7 @@ body {
 .content2 ul{
     list-style-type: none;
 }
+
 /*Footer Layout*/
 footer {
     border-radius: var(--borderRadius);
@@ -327,6 +327,50 @@ footer {
 footer h5{
     margin:auto;
     padding:14px;
+}
+
+/*Citation Layouts*/
+.references {
+    background-color: black;
+    width: 98vw;
+    height: 98vh;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: var(--headerHeight) var(--navHeight) 1fr var(--footerHeight);
+    font-weight: 100;
+    color: white;
+    text-align: center;
+}
+.singleColumn {
+    border-radius: var(--borderRadius);
+    border: var(--border);
+    background-color: var(--backGroundColor);
+    grid-column-start: 1;
+    grid-column-end: 5;
+    text-align:left;
+}
+.singleColumn h2 {
+    text-align:center;
+}
+.singleColumn ul {
+    padding: 10px 30px;
+    font-size: var(--textContent);   
+}
+.singleColumn ul ol {
+    padding: 5px 20px;
+}
+.singleColumn ul ol p {
+    padding: 5px 20px;
+}
+.singleColumn a {
+    text-decoration:none;
+    color:white;
+}
+.singleColumn a:hover {
+    background-color:black;
+}
+.singleColumn hr {
+    margin: 20px;
 }
 
 
