--- a/mainv1.1.css
+++ b/mainv1.1.css
@@ -19,6 +19,11 @@
     --footerHeight: 75px;
 }
 /* ############################################################################################### */
+/* CSS RESET*/
+* {
+    margin: 0;
+    padding: 0;
+}
 
 /*Main Header Layout*/
 .mainHeader {
